--- a/frontend/public/locales/locale-hu.json
+++ b/frontend/public/locales/locale-hu.json
@@ -71,7 +71,8 @@
   "story": {
     "written": "Írta",
     "like": {
-      "noLogin": "Be kell légy jelentkezve"
+      "noLogin": "Be kell légy jelentkezve",
+      "unavailable": "Ez a blog még elérhetetlen"
     },
     "comments": {
       "title": "Hozzászólások",
@@ -109,7 +110,8 @@
         "commentLength": "A hozzászólás nem lehet hosszabb 255 karakternél"
       }
     },
-    "continue": "Olvass tovább"
+    "continue": "Olvass tovább",
+    "unavailable": "Ez a blog elérhető lesz:"
   },
   "notFound": {
     "tabTile": "Nem található",
