--- a/frontend/public/locales/locale-ro.json
+++ b/frontend/public/locales/locale-ro.json
@@ -204,7 +204,7 @@
     "continue": "Citește mai departe",
     "like": {
       "noLogin": "Trebuie să fii autentificat",
-      "unavailable": "Acest blog nu este disponibil încă"
+      "unavailable": "Acest blog nu este încă publicat"
     },
     "written": "Scris de",
     "unavailable": "Acest blog va fi disponibil în:"
