The errors are now localized and the content field will hide the error once there is content in it

--- a/frontend/public/locales/locale-en.json
+++ b/frontend/public/locales/locale-en.json
@@ -262,6 +262,12 @@
     "posting": {
       "success": "Post uploaded successfully",
       "loading": "Uploading your post"
+    },
+    "erros": {
+      "notEmpty": "This field is mandatory",
+      "max": "The maximum number of characters is 255",
+      "date": "Invalid ISO date format",
+      "url": "This must be a valid URL"
     }
   },
   "forgotPassword": {
