Blocked the ability to post to a previous date on the frontend

--- a/frontend/public/locales/locale-ro.json
+++ b/frontend/public/locales/locale-ro.json
@@ -43,7 +43,7 @@
     },
     "title": "Panou de control",
     "posts": {
-      "create": "Scriu un articol",
+      "create": "Scrie un articol",
       "postCount": "Numărul de articole"
     },
     "likes": {
